examples/026-ArgoCD/playbooks/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.singleton.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "argocd-server"
            port:
              number: 8080
